[package]
name = "port-selector"
version = "0.1.2"
edition = "2021"
categories = ["accessibility"]
keywords = ["port", "check", "free", "select"]
homepage = "https://github.com/ZingerLittleBee/port-selector-rs"
repository = "https://github.com/ZingerLittleBee/port-selector-rs"
description = "port availability checking and port filtering based on conditions"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"