[package]
name = "port-selector"
version = "0.1.6"
edition = "2021"
categories = ["accessibility"]
keywords = ["port", "check", "free", "select"]
homepage = "https://github.com/ZingerLittleBee/port-selector-rs"
repository = "https://github.com/ZingerLittleBee/port-selector-rs"
description = "port-selector is a rust library that provides functions to port availability checking, port filtering based on conditions and occupy specified ports."
readme = "README.md"
license = "MIT"

[dependencies]
rand = "0.8.5"